force-app/main/default/objects/Ecm_Composition__c/Ecm_Composition__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Ecm Composition</label>
</CustomObject>