force-app/main/default/objects/Ecm_Composition__c/fields/Oauth_Secret__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Secret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oauth Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>