force-app/main/default/objects/Ecm_Composition__c/fields/Oauth_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Oauth_Token_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oauth Token Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>